fix: change open ai to gemini

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ WHATSAPP_TOKEN=
 WHATSAPP_APP_SECRET=
 BOT_API_TOKEN=
 GEMINI_API_KEY=
+GEMINI_ASSISTANT_ID=
 HOTELLO_BACKEND_URL=
 ENV=development
 
@@ -19,5 +20,3 @@ PHONE_NUMBER_ID=""
 
 VERIFY_TOKEN=""
 
-OPENAI_API_KEY=""
-OPENAI_ASSISTANT_ID=""
